Strange fix for Chrome re: z-index

--- a/css/flashcard.css
+++ b/css/flashcard.css
@@ -37,7 +37,7 @@
 .panel .front {
 	margin-top: 0;
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     width: inherit;
     height: inherit;
     text-align: center;
@@ -54,8 +54,8 @@
     -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
 }
-.panel.flip .front {
-    z-index: 1;
+.panel .flip .front {
+    z-index: 10;
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
 }
@@ -63,7 +63,7 @@
 	margin-top: 0;
     position: absolute;
     top: 0;
-    z-index: 0;
+    z-index: -1;
     width: inherit;
     height: inherit;
     -webkit-transform: rotateY(-180deg);
@@ -81,7 +81,7 @@
     transition: all .4s ease-in-out;
 }
 .panel.flip .back {
-    z-index: 2;
+    z-index: 100;
     -webkit-transform: rotateX(0deg) rotateY(0deg);
     -moz-transform: rotateX(0deg) rotateY(0deg);
 }
@@ -91,7 +91,7 @@
 	display:             none;
 	position:            relative;
 	margin-top:          0px;
-	z-index:             0;
+	z-index:             -1;
 }
 
 #next_card{
@@ -99,12 +99,12 @@
 	position:            absolute;
 	top:                 0;
 	left:                15px;
-	z-index:             0;
+	z-index:             -1;
 }
 
 button{
 	position:            absolute;
-	z-index:             2;
+	z-index:             100;
 }
 
 #next{
